# ComfyUI-SmartScreenshotCleaner

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  border_crop.py
