[project]
name = "smartscreenshotcleaner"
description = "Nodes for removing UI elements from screenshots by detecting and masking icons, buttons, and text. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core", "torch>=2.0.0", "numpy>=1.21.0", "Pillow>=9.0.0", "torchvision>=0.15.0", "# YOLO UI Detection", "ultralytics>=8.0.0", "huggingface_hub>=0.16.0", "# LaMa Inpainting (for mixed edge cases)", "simple-lama-inpainting>=0.1.0"]

[project.urls]
Repository = "https://github.com/AnastasiyaW/ComfyUI-SmartScreenshotCleaner"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/AnastasiyaW/ComfyUI-SmartScreenshotCleaner/wiki"
"Bug Tracker" = "https://github.com/AnastasiyaW/ComfyUI-SmartScreenshotCleaner/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SmartScreenshotCleaner"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

